footer z-index fix

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,6 +6,8 @@ footer {
     border-top: 1px solid $borderColor;
     padding: $padding-large;
     background-color: $dark;
+    z-index: 3;
+    position: relative;
 
     #folkanImg {
         max-height: $baseline*3.5;
